docs: enxuga readme - foca em compilar, rodar e frases de teste